Updated the step helper to C#. Removed the VB.NET verision. Thank you!

--- a/Marcusoft.BDD.WhiteStepHelper.Specs/App.config
+++ b/Marcusoft.BDD.WhiteStepHelper.Specs/App.config
@@ -10,7 +10,7 @@
     <trace traceSuccessfulSteps="true" traceTimings="true" minTracedDuration="0:0:0.1"/>
 
     <stepAssemblies>
-      <stepAssembly assembly="Marcusoft.BDD.WhiteStepHelper.VB" />
+      <stepAssembly assembly="Marcusoft.BDD.WhiteStepHelper" />
     </stepAssemblies>
 
   </specFlow>
