--- a/Marcusoft.BDD.WhiteStepHelper/Marcusoft.BDD.WhiteStepHelper.csproj
+++ b/Marcusoft.BDD.WhiteStepHelper/Marcusoft.BDD.WhiteStepHelper.csproj
@@ -55,6 +55,7 @@
     <Compile Include="WhiteStepBase.cs" />
     <Compile Include="TestConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WhiteTreeExtensions.cs" />
     <Compile Include="WhiteWindowExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
